--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=campus.db"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=campuslostfound;Username=postgres;Password=admin"
   }
 }
