--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,20 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=campuslostfound;Username=postgres;Password=admin"
+    "DefaultConnection": ""
+  },
+  "OpenAI": {
+    "ApiKey": ""
+  },
+  "N8n": {
+    "ClaimCreatedWebhookUrl": "",
+    "ListingCreatedWebhookUrl": ""
+  },
+  "Ai": {
+    "ApiKey": "",
+    "ApiBaseUrl": "https://api.openai.com",
+    "ChatModel": "gpt-4",
+    "AssistModel": "gpt-4o-mini",
+    "EmbeddingsModel": "text-embedding-ada-002"
   }
 }
